--- a/index.html
+++ b/index.html
@@ -23,16 +23,18 @@
              <img class="logo" src="images/logo.png" alt="TinDog Logo">
              <img class="top-bar-icon" src="images/icon-chat.png" alt="direct messages">
         </div>
-        <div class="profile" id="profile">
-         <!-- The content of this div is added through the index.js file -->
-        </div>
-        <div class="selectors">
-            <button class="selector" id="reject-btn">
-                <img src="images/icon-cross.png" alt="Reject button">
-            </button>
-            <button class="selector" id="accept-btn">
-                <img src="images/icon-heart.png" alt="Accept button">
-            </button>
+        <div class="discover-container" id="discover-container">
+            <div class="profile" id="profile">
+            <!-- The content of this div is added through the index.js file -->
+            </div>
+            <div class="selectors">
+                <button class="btn" id="reject-btn">
+                    <img src="images/icon-cross.png" alt="Reject button">
+                </button>
+                <button class="btn" id="accept-btn">
+                    <img src="images/icon-heart.png" alt="Accept button">
+                </button>
+            </div>
         </div>
     </main>
    
